#1：添加package.json的scripts脚本 #2：修改备案号

--- a/src/index.html
+++ b/src/index.html
@@ -627,7 +627,7 @@
       </div>
       <div class="copyright-wrap">
         <div class="container">
-          <div class="row">
+          <!-- <div class="row">
             <div class="copyright-menu">
               <a
                 href="https://qianjia.com/special/service/index.html"
@@ -648,12 +648,13 @@
                 >联系我们</a
               >
             </div>
-          </div>
+          </div> -->
           <div class="row">
-            <div class="copyright">
+            <!-- <div class="copyright">
               Copyright © 2000- 2019 广州智家科技有限公司 版权所有 All Right
               Reserved , 广东省通信管理局ICP证：粤B2-20030243粤ICP备09011189号
-            </div>
+            </div> -->
+            <div class="copyright2">备案号：桂ICP备20006161号</div>
           </div>
         </div>
       </div>
